--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,12 +6,12 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches: ['main']
   pull_request:
-    branches: [ "main" ]
+    branches: ['main']
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/maaaaaaaaad
+  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/server
   VERSION: ${{ github.sha }}
   NAME: go_cicd
 
@@ -45,11 +45,11 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
-          
+
   deploy:
     needs: build
     name: Deploy
-    runs-on: [ self-hosted, label-go ]
+    runs-on: [self-hosted, label-go]
     steps:
       - name: Login to ghcr
         uses: docker/login-action@v1
@@ -60,4 +60,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 5454:5454 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d -p 5454:5454 --name server --restart always ${{ env.DOCKER_IMAGE }}:latest
