--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
     branches: ['main']
 
 env:
-  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/server
+  DOCKER_IMAGE: ghcr.io/${{ github.actor }}/test
   VERSION: ${{ github.sha }}
   NAME: go_cicd
 
@@ -59,5 +59,5 @@ jobs:
           password: ${{ secrets.TEST }}
       - name: Docker run
         run: |
-          docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 6464:6464 --name server --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q) && docker system prune --volumes
+          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
