--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,5 +59,5 @@ jobs:
           password: ${{ secrets.TEST }}
       - name: Docker run
         run: |
-          docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q) && docker system prune --volumes
+          docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
           docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
