--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,8 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    env:
+      SERVER_PORT: ${{ secrets.SERVER_PORT }}
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
