--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    env:
-      SERVER_PORT: ${{ secrets.SERVER_PORT }}
     steps:
       - name: Check out source code
         uses: actions/checkout@v2
@@ -40,6 +38,11 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.TEST }}
+      - name: Env
+        run: |
+          echo "SERVER_PORT=$SERVER_PORT" >> .env.production
+        env:
+          SERVER_PORT: ${{ secrets.SERVER_PORT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
