--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,11 +38,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.TEST }}
-      - name: Env
-        run: |
-          echo "SERVER_PORT=$SERVER_PORT" >> .env.production
-        env:
-          SERVER_PORT: ${{ secrets.SERVER_PORT }}
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -50,6 +45,8 @@ jobs:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
+          secrets: |
+            "SERVER_PORT=${{ secrets.SERVER_PORT }}"
 
   deploy:
     needs: build
