--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
+        env:
+          SERVER_PORT: ${{ secrets.SERVER_PORT }}
         with:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
-          secrets: |
-            "SERVER_PORT=${{ secrets.SERVER_PORT }}"
 
   deploy:
     needs: build
