--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,8 +41,6 @@ jobs:
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
-        env:
-          SERVER_PORT: ${{ secrets.SERVER_PORT }}
         with:
           builder: ${{ steps.buildx.outputs.name }}
           push: true
@@ -62,4 +60,5 @@ jobs:
       - name: Docker run
         run: |
           docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
-          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+#          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker-compose up -d --build
