--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: ['main']
   pull_request:
@@ -43,6 +39,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
+          platforms: linux/amd64
           push: true
           tags: ${{ env.DOCKER_IMAGE }}:latest
 
@@ -60,5 +57,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
-#          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
-          docker-compose up -d --build
+          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
