--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,4 +57,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
-          docker run -d -e NODE_ENV=production -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d -p 6464:6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
