--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,6 +57,5 @@ jobs:
       - name: Docker run
         run: |
           docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
-          docker-compose up -d --build
-
-#          docker run -d -p 6464:6464 -e SERVER_PORT=6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d -e SERVER_PORT=6464 -e DATABASE_URL=mysql://root:12345@localhost:3306/prisma \ 
+          -p 6464:6464 -e SERVER_PORT=6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
