--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,4 +57,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop test && docker rm test && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -itd --net=host -e SERVER_PORT=6464 -e DATABASE_URL=mysql://root:12345@localhost:3306/prisma -p 6464:6464 -e SERVER_PORT=6464 --name test --restart always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -itd -e SERVER_PORT=6464 -e DATABASE_URL=mysql://root:12345@localhost:3306/prisma -p 6464:6464 -e SERVER_PORT=6464 --name test --restart=always ${{ env.DOCKER_IMAGE }}:latest --network="host"
