--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,10 +55,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.TEST }}
       - name: Docker run
-        with:
-          compose-file: ./docker-compose.yml
         run: |
-          docker stop test && docker rm test && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker-compose up -d --build
-
-#          docker run -itd -e SERVER_PORT=6464 -e DATABASE_URL=mysql://root:12345@3.37.130.205:3306/prisma -p 6464:6464 --name test --restart=always ${{ env.DOCKER_IMAGE }}:latest
+          docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
+          docker run -itd -p 6464:6464 --name test --net=host -e SERVER_PORT=6464 -e DATABASE_URL=mysql://root:12345@localhost:3306/prisma --restart=always ${{ env.DOCKER_IMAGE }}:latest
+          docker run -itd --name db --net=host --restart=always -p 3306:3306 -e MYSQL_ROOT_PASSWORD=12345 -e TZ=Asia/Seoul mysql:5.7 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
