--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,5 +57,4 @@ jobs:
       - name: Docker run
         run: |
           docker stop $(docker ps -a -q) && docker rm $(docker ps -a -q) && docker rmi $(docker images -q)
-          docker run -itd --name db --net=host --restart=always -p 3306:3306 -e MYSQL_ROOT_PASSWORD=12345 -e TZ=Asia/Seoul mysql:5.7 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
-          docker run -itd --name test --net=host -p 6464:6464 ${{ env.DOCKER_IMAGE }}:latest
+          docker run -d --name test --net=host -p 6464:6464 ${{ env.DOCKER_IMAGE }}:latest
