--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "NODE_ENV=development nest start --watch",
+    "start:dev": "NODE_ENV=development dotenv -e .env.development -- npx prisma migrate dev --name update && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "NODE_ENV=production dotenv -e .env.stagingdb prisma migrate deploy && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
